...
                                                        <size key="shadowOffset" width="0.0" height="0.0"/>
                                                    </label>
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email ID" textAlignment="natural" minimumFontSize="18" translatesAutoresizingMaskIntoConstraints="NO" id="tbb-th-AKG">
                                                        <rect key="frame" x="0.0" y="0.0" width="358" height="50"/>
                                                        <color key="backgroundColor" systemColor="systemGray6Color"/>
...
                                                        <size key="shadowOffset" width="0.0" height="0.0"/>
                                                    </label>
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="18" translatesAutoresizingMaskIntoConstraints="NO" id="rYj-Yg-wQj">
                                                        <rect key="frame" x="0.0" y="80" width="358" height="50"/>
                                                        <color key="backgroundColor" systemColor="systemGray6Color"/>
...
                                                        </constraints>
                                                        <state key="normal" title="Button"/>
                                                        <buttonConfiguration key="configuration" style="filled" title="Login">
                                                            <fontDescription key="titleFontDescription" name="Baskerville-SemiBold" family="Baskerville" pointSize="20"/>
                                                            <color key="baseBackgroundColor" red="0.0" green="0.26666666666666666" blue="0.27058823529411763" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                                        <color key="tintColor" systemColor="tintColor"/>
                                                        <state key="normal" title="Button"/>
                                                        <buttonConfiguration key="configuration" style="filled" title="Sign Up">
                                                            <fontDescription key="titleFontDescription" name="Baskerville-SemiBold" family="Baskerville" pointSize="20"/>
                                                            <color key="baseBackgroundColor" red="0.43529411764705883" green="0.72549019607843135" blue="0.5607843137254902" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                        </constraints>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="filled" title="ADD TO BAG">
                                            <fontDescription key="titleFontDescription" name="Baskerville-Bold" family="Baskerville" pointSize="22"/>
                                            <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                        </constraints>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="gray" image="shippingbox" catalog="system" title="Order">
                                            <fontDescription key="titleFontDescription" name="GillSans-SemiBold" family="Gill Sans" pointSize="22"/>
                                            <color key="baseForegroundColor" red="0.1803921568627451" green="0.27450980392156865" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                        </connections>
                                    </button>
                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="emptyCart.gif" translatesAutoresizingMaskIntoConstraints="NO" id="BUo-ib-Kdo">
                                        <rect key="frame" x="57" y="50" width="300" height="300"/>
                                        <constraints>
...
                                </constraints>
                            </view>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="My Cart" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fz2-fa-uis">
                                <rect key="frame" x="0.0" y="44" width="414" height="60"/>
                                <constraints>
...
                                                <rect key="frame" x="0.0" y="0.0" width="350" height="50"/>
                                                <subviews>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name: " lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B8n-yC-Rdl">
                                                        <rect key="frame" x="0.0" y="0.0" width="120" height="50"/>
                                                        <constraints>
...
                                                <rect key="frame" x="0.0" y="200" width="350" height="50"/>
                                                <subviews>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mobile: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VS4-5l-Cbi">
                                                        <rect key="frame" x="0.0" y="0.0" width="120" height="50"/>
                                                        <constraints>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="My Order" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CW0-1d-b6N">
                                <rect key="frame" x="20" y="44" width="374" height="50"/>
                                <constraints>
...
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" image="chevron.backward.2" catalog="system"/>
                                <connections>
                                    <segue destination="YuA-Nj-wIE" kind="unwind" unwindAction="backToCartPressed:" id="MB0-Wp-wy1"/>
...
                                        <rect key="frame" x="28" y="8" width="358" height="50"/>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="filled" title="PLACE ORDER">
