...
    @IBOutlet weak var placeOrderButton: UIButton!
    
    //MARK: View Did Load
    override func viewDidLoad() {
        super.viewDidLoad()
        
        //Tab Bar
        self.tabBarController?.tabBar.isHidden = true
        
        //Table View
        orderTableView.dataSource = self
        orderTableView.delegate = self
        
...
