...
                        <rect key="frame" x="360" y="10" width="30" height="30"/>
                        <constraints>
                            <constraint firstAttribute="height" constant="30" id="4pZ-xs-vkS"/>
                            <constraint firstAttribute="width" constant="30" id="PRl-Lq-MFt"/>
                        </constraints>
                        <state key="normal" title="Button"/>
                        <buttonConfiguration key="configuration" style="plain" image="trash" catalog="system">
                            <color key="baseForegroundColor" red="0.79607843140000001" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        </buttonConfiguration>
                        <connections>
                            <action selector="removeItemClicked:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="3nf-HM-z4Z"/>
                        </connections>
                    </button>
...
